@@ -1,5 +1,8 @@
 2004-12-16  Geoffrey Keating  <geoffk@apple.com>
 
+	* c-cppbuiltin.c (builtin_define_float_constants): Set __*_EPSILON__
+	for IBM long double format correctly.
+
 	* config/darwin.c (darwin_handle_weak_import_attribute): Permit
 	VAR_DECLs to have weak_import attribute.
 
